--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,17 @@
 #键值对中间需要一个空格
 debug: true
+
+#服务端口号
 server:
   port: 8080
+
+  #jdbc
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     password: bookjiang
     username: root
-
+#mybatis
 mybatis:
   mapper-locations:
     - classpath:mapper/*.xml
