--- a/mall-user-service/src/main/resources/application.properties
+++ b/mall-user-service/src/main/resources/application.properties
@@ -26,10 +26,14 @@ spring.dubbo.registry.protocol=zookeeper
 spring.dubbo.base-package=com.zhiqiang.mall
 
 
+#springboot security的登录账号和密码
+security.user.name=root
+security.user.password=root
+
 
 #dubbo的consumer在三秒钟之内每间隔一秒进行一次重新访问，默认一秒钟超时，三次访问之后会直接抛超时异常，所以我们在开发阶段，可以将consumer设置的超时时间延长，方便断点调试
 
 # 设置超时时间
-spring.dubbo.consumer.timeout=600000
+#spring.dubbo.consumer.timeout=600000
 # 设置是否检查服务存在
-spring.dubbo.consumer.check=false
+#spring.dubbo.consumer.check=false
