--- a/mall-user-web/src/main/resources/application.properties
+++ b/mall-user-web/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.dubbo.registry.address=192.168.43.128:2181
 spring.dubbo.registry.protocol=zookeeper
 # dubbo的服务的扫描路径
 spring.dubbo.base-package=com.zhiqiang.mall
+
+# 设置超时时间
+spring.dubbo.consumer.timeout=600000
+# 设置是否检查服务存在
+spring.dubbo.consumer.check=false
+#springboot security的登录账号和密码
+security.user.name=root
+security.user.password=root
