--- a/mall-api/pom.xml
+++ b/mall-api/pom.xml
@@ -54,10 +54,10 @@
 
     </dependency>
     <!--            springbootData-->
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--        <groupId>org.springframework.boot</groupId>-->
+<!--        <artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--    </dependency>-->
 </dependencies>
 
 </project>
