--- a/mall-product-service/src/main/resources/application.properties
+++ b/mall-product-service/src/main/resources/application.properties
@@ -7,8 +7,10 @@ spring.datasource.password=bookjiang
 spring.datasource.url=jdbc:mysql://localhost:3306/mall1?serverTimezone=UTC
 #mybatis配置
 ###mapper.xml文件中resultMap的type或者parameterType会使用自定义的pojo，
+#配置映射类所在包名
 mybatis.type-aliases-package=com.zhiqiang.mall.bean
-mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+#配置mapper xml文件所在路径
+mybatis.mapper-locations=classpath*:dao/*.xml,classpath:mapper/*Mapper.xml
 # 驼峰命名规范 如：数据库字段是  order_id 那么 实体字段就要写成 orderId
 mybatis.configuration.map-underscore-to-camel-case=true
 
