开始实现order模块

--- a/mall-manage-web/src/main/resources/application.properties
+++ b/mall-manage-web/src/main/resources/application.properties
@@ -45,9 +45,9 @@ jwt.tokenHead= Bearer
 # oss对外服务的访问域名
 aliyun.oss.endpoint= oss-cn-hangzhou.aliyuncs.com
 # 访问身份验证中用到用户标识
-aliyun.oss.accessKeyId= test
+aliyun.oss.accessKeyId= LTAI4GEYTeDtHjb4Y15mzooh
 # 用户用于加密签名字符串和oss用来验证签名字符串的密钥
-aliyun.oss.accessKeySecret= test
+aliyun.oss.accessKeySecret= gi1dhcxo2tRlFEHHIBQjjEL6jRu7dm
 # oss的存储空间
 aliyun.oss.bucketName= bookjiang
 # 签名有效期(S)
